; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/ipset/extr_ip_set_hash_netportnet.c_hash_netportnet6_data_reset_elem.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/ipset/extr_ip_set_hash_netportnet.c_hash_netportnet6_data_reset_elem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hash_netportnet6_elem = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hash_netportnet6_elem*, %struct.hash_netportnet6_elem*)* @hash_netportnet6_data_reset_elem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hash_netportnet6_data_reset_elem(%struct.hash_netportnet6_elem* %0, %struct.hash_netportnet6_elem* %1) #0 {
  %3 = alloca %struct.hash_netportnet6_elem*, align 8
  %4 = alloca %struct.hash_netportnet6_elem*, align 8
  store %struct.hash_netportnet6_elem* %0, %struct.hash_netportnet6_elem** %3, align 8
  store %struct.hash_netportnet6_elem* %1, %struct.hash_netportnet6_elem** %4, align 8
  %5 = load %struct.hash_netportnet6_elem*, %struct.hash_netportnet6_elem** %4, align 8
  %6 = getelementptr inbounds %struct.hash_netportnet6_elem, %struct.hash_netportnet6_elem* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.hash_netportnet6_elem*, %struct.hash_netportnet6_elem** %3, align 8
  %11 = getelementptr inbounds %struct.hash_netportnet6_elem, %struct.hash_netportnet6_elem* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 1
  store i32 %9, i32* %13, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
